Migration to Java 10
Far from perfect, but it's possible to build using JDK 10 and ANT and when adding junit to modules-info.java you can even run tests in Eclipse Oxygen.